# VisionPipelines

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: registration.ipynb
notebooks/.ipynb_checkpoints/: object_detection-checkpoint.ipynb
src/: constants.py  object_detection_pipeline.py  object_detection_task.py  registration_task.py  task.py  utils.py  vision_pipeline.py
src/visionpipelines/: constants.py  utils.py
src/visionpipelines/pipelines/: object_detection_pipeline.py  registration_pipeline.py  vision_pipeline.py
src/visionpipelines/tasks/: object_detection_task.py  registration_task.py  task.py
tests/: test_registration_task.py  test_vision_pipeline.py
tests/pipelines/: test_registration_pipelines.py  test_vision_pipeline.py
tests/utils/: __init__.py
vision_pipeline/: vision_pipeline.py
vision_pipelines/: vision_pipeline.py
