[tool.poetry]
name = "VisionPipeline"
version = "0.1.0"
description = "Easy to use python module for advanced image processing tasks"
authors = ["Simone De Gasperis <simone.de.gasperis94@gmail.com>"]
license = "Apache-2.0"
packages = [{ include = "visionpipelines", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
kornia = "^0.7.3"
torch = "^2.4.0"
torchvision = "^0.19.0"
numpy = "^1.0.0"
opencv-python = "^4.10.0.84"
matplotlib = ">=3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
